applications/backend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: finops-api
  namespace: finops

spec:
  selector:
    app: finops-api

  ports:
    - name: http
      port: 80
      targetPort: 8000

  type: ClusterIP
