applications/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: finops-api
  namespace: finops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - api.sniper541.com
      secretName: finops-api-tls

  rules:
    - host: api.sniper541.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finops-api
                port:
                  number: 80
